[tool.poetry]
name = "lv-pipeline-dw-sql-dbt"
version = "0.1.0"
description = ""
authors = ["Diego Morais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.10.8"
dbt-bigquery = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
